infra/minio/minio-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio
  namespace: openshift-operators
spec:
  port:
    targetPort: 9000
  to:
    kind: Service
    name: minio
  tls:
    termination: passthrough
  wildcardPolicy: None
